--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -129,19 +129,32 @@
     height: $select-height;
     padding: $input-padding-y (($input-padding-x / 2) + $custom-select-indicator-padding) $input-padding-y ($input-padding-x / 2);
     padding-right: ($input-padding-x / 2) \9;
-    color: $custom-select-color;
+    color: $input-color;
     vertical-align: middle;
-    background: $custom-select-bg $custom-select-indicator no-repeat right ($input-padding-x / 2) center;
+    background: $input-bg $custom-select-indicator no-repeat right ($input-padding-x / 2) center;
     background-image: none \9;
-    background-size: $custom-select-bg-size;
-    border: $custom-select-border-width solid $custom-select-border-color;
-    @include border-radius($custom-select-border-radius);
+    background-size: $custom-select-indicator-size;
+    border: $input-border-width solid $input-border-color;
+    @include border-radius($input-border-radius);
     appearance: none;
 
     &:focus {
-        border-color: $custom-select-focus-border-color;
+        color: $input-focus-color;
+        background-color: $input-focus-bg;
+        border-color: $input-focus-border;
         outline: none;
-        @include box-shadow($custom-select-focus-box-shadow);
+
+        @if $enable-shadows {
+            @if $enable-focus-ring {
+                box-shadow: $focus-ring-shadow, $input-focus-box-shadow;
+            } @else {
+                box-shadow: $input-focus-box-shadow;
+            }
+        } @else {
+            @if $enable-focus-ring {
+                box-shadow: $focus-ring-shadow;
+            }
+        }
 
         &::-ms-value {
             // For visual consistency with other platforms/browsers,
@@ -149,15 +162,15 @@
             // the selected option text when the (still closed) <select> receives focus
             // in IE and (under certain conditions) Edge.
             // See https://github.com/twbs/bootstrap/issues/19398.
-            color: $input-color;
-            background-color: $input-bg;
+            color: $input-focus-color;
+            background-color: $input-focus-bg;
         }
     }
 
     &:disabled {
-        color: $custom-select-disabled-color;
+        color: $input-disabled-color;
         cursor: $cursor-disabled;
-        background-color: $custom-select-disabled-bg;
+        background-color: $input-disabled-bg;
     }
 
     // Hides the default caret in IE11
