--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -3,7 +3,11 @@
 // Used in _forms.scss to generate the form validation CSS for warnings, errors,
 // and successes.
 
-@mixin form-control-validation($color, $border-color) {
+@mixin form-control-validation($color-name) {
+    $color:        palette-context($color-name);
+    $border:       palette-context($color-name, $level-context-border);
+    $border-hover: palette-context($color-name, $level-context-hover-border);
+
     // Color the label and help text
     .form-control-feedback,
     .form-control-label,
@@ -13,9 +17,11 @@
     }
     // Set the border and box shadow on specific inputs to match
     .form-control {
-        border-color: $border-color;
+        border-color: $border;
 
         &:focus {
+            border-color: $border-hover;
+
             @if $enable-shadows {
                 @if $enable-focus-ring {
                     box-shadow: $focus-ring-shadow, $input-focus-box-shadow;
