--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -545,15 +545,7 @@ $custom-select-indicator:           url("data:image/svg+xml;charset=utf8,%3Csvg 
 
 // Custom file
 $custom-file-width:                 14rem !default;
-$custom-file-focus-box-shadow:      0 0 0 .075rem #fff, 0 0 0 .2rem map-get($context-colors, "primary") !default;
-
-$custom-file-color:                 $uibase-600 !default;
-$custom-file-bg:                    $white !default;
-$custom-file-border-width:          $border-width !default;
-$custom-file-border-color:          rgba(0,0,0,.25) !default;
-$custom-file-border-radius:         $border-radius !default;
-$custom-file-box-shadow:            inset 0 .2rem .4rem rgba(0,0,0,.05) !default;
-$custom-file-button-color:          $custom-file-color !default;
+$custom-file-button-color:          $uibase-600 !default;
 $custom-file-button-bg:             $uibase-50 !default;
 $custom-file-text: (
     placeholder: (
