no focus ring for non-keyboard focusable items

--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -194,6 +194,9 @@ a:not([href]):not([tabindex]) {
 
     &:focus {
         outline: none;
+        @if $enable-focus-ring {
+            box-shadow: none;
+        }
     }
 }
 
