--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -55,25 +55,9 @@
 }
 
 select.form-control {
-    &:not([size]):not([multiple]) {
-        height: $select-height;
-    }
-
-    // Sizes
-    @if $enable-sizing {
-        @each $size, $dims in $component-sizes {
-            $sz-font-size:     map-get($dims, "font-size");
-            $sz-padding-y:     map-get($dims, "padding-y") - ($input-line-height-delta * $sz-font-size / 2);
-            $sz-input-height:  (($sz-font-size * $input-line-height) + ($sz-padding-y * 2));
-            $sz-select-height: calc(#{$sz-input-height} + #{($input-border-width * 2)});
-
-            &.form-control-#{$size}:not([size]):not([multiple]),
-            .input-group-#{$size} &.form-control:not([size]):not([multiple]) {
-                height: $sz-select-height;
-                padding-top: $sz-padding-y;
-                padding-bottom: $sz-padding-y;
-            }
-        }
+    &[size],
+    &[multiple] {
+        height: auto;
     }
 
     &:focus::-ms-value {
@@ -85,10 +69,6 @@ select.form-control {
         color: $input-focus-color;
         background-color: $input-focus-bg;
     }
-}
-
-select[multiple].form-control {
-    height: auto;
 }
 
 textarea.form-control {
@@ -111,20 +91,6 @@ textarea.form-control {
     padding-bottom: calc(#{$input-padding-y} + #{$input-border-width});
     margin-bottom: 0; // Override the `<label>` default
 }
-// Label sizes
-@if $enable-sizing {
-    @each $size, $dims in $component-sizes {
-        $sz-font-size:     map-get($dims, "font-size");
-        $sz-padding-y:     map-get($dims, "padding-y") - ($input-line-height-delta * $sz-font-size / 2);
-
-        .form-control-label-#{$size} {
-            padding-top: calc(#{$sz-padding-y} + #{$input-border-width});
-            padding-bottom: calc(#{$sz-padding-y} + #{$input-border-width});
-            margin-bottom: 0;
-            font-size: $sz-font-size;
-        }
-    }
-}
 
 // Legends
 // For use with horizontal and inline forms, when you need the legend text to
@@ -136,72 +102,20 @@ textarea.form-control {
     font-size: $font-size-base;
 }
 
-
-// Todo: clear this up
-
-// Special styles for iOS temporal inputs
-//
-// In Mobile Safari, setting `display: block` on temporal inputs causes the
-// text within the input to become vertically misaligned. As a workaround, we
-// set a pixel line-height that matches the given height of the input, but only
-// for Safari. See https://bugs.webkit.org/show_bug.cgi?id=139848
-//
-// Note that as of 8.3, iOS doesn't support `week`.
-
-_::-webkit-full-page-media, // Hack to make this CSS be Safari-only; see http://browserbu.gs/css-hacks/webkit-full-page-media/
-input[type="date"],
-input[type="time"],
-input[type="datetime-local"],
-input[type="month"] {
-    &.form-control {
-        line-height: $input-height;
-    }
-
-    @if $enable-sizing {
-        @each $size, $dims in $component-sizes {
-            $sz-font-size:    map-get($dims, "font-size");
-            $sz-padding-y:    map-get($dims, "padding-y") - ($input-line-height-delta * $sz-font-size / 2);
-            $sz-input-height: (($sz-font-size * $input-line-height) + ($sz-padding-y * 2));
-
-            &.form-control-#{$size},
-            .input-group-#{$size} &.form-control {
-                line-height: $sz-input-height;
-            }
-        }
-    }
-}
-
-
 // Static form control text
-//
 // Apply class to an element to make any string of text align with labels in a
 // horizontal form layout.
-
 .form-control-static {
     min-height: $input-height;
     // Size it appropriately next to real form controls
     padding-top: $input-padding-y;
     padding-bottom: $input-padding-y;
-    // Remove default margin from `p`
     margin-bottom: 0;
-
-    @if $enable-sizing {
-        @each $size, $dims in $component-sizes {
-            &.form-control-#{$size} {
-                padding-right: 0;
-                padding-left: 0;
-            }
-        }
-    }
 }
 
 // Form control sizing
-//
 // Build on `.form-control` with modifier classes to decrease or increase the
 // height and font-size of form controls.
-//
-// The `.form-group-* form-control` variations are sadly duplicated to avoid the
-// issue documented in https://github.com/twbs/bootstrap/issues/15074.
 @if $enable-sizing {
     @each $size, $dims in $component-sizes {
         $sz-font-size:     map-get($dims, "font-size");
@@ -217,6 +131,13 @@ input[type="month"] {
             font-size: $sz-font-size;
             @include border-radius($sz-border-radius);
         }
+
+        .form-control-label-#{$size},
+        .form-control-static-#{$size} {
+            padding-top: calc(#{$sz-padding-y} + #{$input-border-width});
+            padding-bottom: calc(#{$sz-padding-y} + #{$input-border-width});
+            font-size: $sz-font-size;
+        }
     }
 }
 
@@ -224,7 +145,6 @@ input[type="month"] {
 //
 // Designed to help with the organization and spacing of vertical forms. For
 // horizontal forms, use the predefined grid classes.
-
 .form-group {
     margin-bottom: $form-group-margin-bottom;
 }
@@ -274,11 +194,7 @@ input[type="month"] {
     }
 
     &:focus {
-        @if $enable-focus-ring {
-            @include focus-ring();
-        } @else {
-            @include focus-outline();
-        }
+        @include focus-ring();
     }
 }
 
