--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -151,7 +151,7 @@ textarea.form-control {
 
 .form-text {
     display: block;
-    margin-top: ($spacer * .25);
+    margin-top: $form-text-margin-top;
 }
 
 
@@ -161,11 +161,11 @@ textarea.form-control {
 .form-check {
     position: relative;
     display: block;
-    margin-bottom: ($spacer * .75);
+    margin-bottom: $form-check-margin-bottom;
 
     // Move up sibling radios or checkboxes for tighter spacing
     + .form-check {
-        margin-top: -.25rem;
+        margin-top: $form-check-sibling-margin-top;
     }
 
     &.disabled {
@@ -177,15 +177,15 @@ textarea.form-control {
 }
 
 .form-check-label {
-    padding-left: 1.25rem;
+    padding-left: $form-check-input-gutter;
     margin-bottom: 0; // Override default `<label>` bottom margin
     cursor: pointer;
 }
 
 .form-check-input {
     position: absolute;
-    margin-top: .3125rem;
-    margin-left: -1.25rem;
+    margin-top: $form-check-input-margin-y;
+    margin-left: -$form-check-input-gutter;
     vertical-align: baseline;
 
     &:only-child {
@@ -212,14 +212,14 @@ textarea.form-control {
     }
 
     + .form-check-inline {
-        margin-left: .75rem;
+        margin-left: $form-check-inline-margin-x;
     }
 }
 
 // Form control feedback states
 // Apply contextual and semantic states to individual form controls.
 .form-control-feedback {
-    margin-top: ($spacer * .25);
+    margin-top: $form-feedback-margin-top;
 }
 
 .form-control-success,
