drop undocumented force of dropup behaviour for dropdowns in bottom fixed navbars

--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -202,8 +202,7 @@
 
 // Allow for dropdowns to go bottom up (aka, dropup-menu)
 // Just add .dropup after the standard .dropdown class and you're set.
-.dropup,
-.navbar-fixed-bottom .dropdown {
+.dropup {
     // Reverse the caret
     .caret {
         content: "";
