additional settings for dropdowns

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -675,7 +675,14 @@ $dropdown-header-color:          $uibase-400 !default;
 $dropdown-caret-width:          .45rem !default;
 $dropdown-caret-color:          $uibase-400 !default;
 $dropdown-caret-active-color:   $active-color !default;
+$dropdown-caret-spacer-x:       .35rem !default;
 
+$dropdown-back-width:          .45rem !default;
+$dropdown-back-color:          $uibase-400 !default;
+$dropdown-back-active-color:   $active-color !default;
+$dropdown-back-spacer-x:       .35rem !default;
+
+$dropdown-toggle-margin-x:      .25rem !default;
 
 // Navs
 // =====
